[project]
name = "deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.12",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "tavily-python>=0.7.26",
]
